# lotto4linux

./: Lotto4linux.depend  Lotto4linux.layout  Makefile  README.md  calcolo.h  config.h  config.h.in  config.status  configure  configure.ac  crediti.h  down.h  estrai.h  euro.h  interfaccia.h  logo.h  lotto4linux.cbp  lotto4linux.depend  lotto4linux.layout  main.c  pulcinella.h  ritardatari.h  smorfia.h  storico.h  version.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
